# Platformer

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  screenshot.xwd
assets/levels/: level1.txt  level2.txt
include/scenes/: level_scene.h  level_select_scene.h  main_menu_scene.h
include/util/: constants.h  level_config.h  level_loader.h
src/: main.cpp
src/scenes/: level_scene.cpp  level_select_scene.cpp  main_menu_scene.cpp
src/util/: level_loader.cpp
